# akello

./: .gitignore  .gitmodules  .sonarcloud.properties  BUILD.md  CHANGELOG.md  CLUSTER.md  Makefile  README.md  SECURITY.md  akello.py  aws.py  cdk.json  configs.json  dev-build.sh  dev-server.sh  dev-setup-local.sh  docker-compose.yml  env.template  et --hard c2adc179  nx.json  package-lock.json  package.json  pyproject.toml  requirements.txt  run-akello-dev.sh  run-dev.py  run-local.sh  run-setup.sh  sonar-project.properties  tailwind.config.json  tsconfig.json
graphql/: Dockerfile  pyproject.toml
graphql/graphql/: app.py  schema.py
graphql/graphql/models/: common.py  organization.py  patient.py  registry.py  user.py
graphql/graphql/mutations/: organization.py  user.py
graphql/graphql/queries/: organization_query.py  user_query.py
graphql/graphql/resolvers/: patient_resolver.py  user_resolver.py
hexagons/user/: Dockerfile  pyproject.toml
microservices/account/: Dockerfile  pyproject.toml
microservices/account/account/adapters/: dynamodb_base.py  dynamodb_unit_of_work.py
microservices/account/account/domain/command_handlers/user/: add_user_command_handler.py  update_user_command_handler.py
microservices/account/account/entrypoints/api/: auth_settings.py  config.py  main.py
microservices/account/account/entrypoints/api/v1/: api.py
microservices/account/infra/: dynamodb.py
microservices/account/service/domain/commands/user/: add_user_command.py
microservices/account/service/domain/model/: organization.py
microservices/akello-account/: Dockerfile  docker-compose.yml  pyproject.toml  readme.md
microservices/akello-account/account/adapters/: dynamodb_base.py  dynamodb_initiation.py  dynamodb_unit_of_work.py
microservices/akello-account/account/domain/model/: organization.py  user.py
microservices/akello-account/account/domain/ports/: unit_of_work.py
microservices/akello-account/account/entrypoints/api/: config.py  main.py
microservices/akello-account/account/entrypoints/api/v1/: api.py  user.py
microservices/auth/server/: app.py  config.py  pyproject.toml
microservices/clinical-model-measurement-based-care/: README.md  pyproject.toml
microservices/clinical-model-measurement-based-care/infra/: dynamodb.py
microservices/clinical-model-measurement-based-care/mbc/adapters/: __init__.py  dynamodb_query_service.py  dynamodb_unit_of_work.py  redis_query_service.py
microservices/clinical-model-measurement-based-care/mbc/adapters/internal/: dynamodb.py  dynamodb_base.py
microservices/clinical-model-measurement-based-care/mbc/domain/model/: measurement.py
microservices/clinical-model-measurement-based-care/mbc/domain/ports/: measurement_query_service.py  registry_query_service.py  unit_of_work.py
microservices/measurement-based-care/: Dockerfile  docker-compose.yml  pyproject.toml
microservices/measurement-based-care/mbc/adapters/: dynamodb_query_service.py  redis_query_service.py
microservices/measurement-based-care/mbc/domain/command_handlers/: add_user_to_registry_command_handler.py  create_registry_command_handler.py  flag_patient_command_handler.py  get_user_from_registry_command_handler.py  graduate_patient_command_handler.py  refer_patient_command_handler.py
microservices/measurement-based-care/mbc/domain/commands/: add_user_to_registry_command.py  flag_patient_command.py  refer_patient_command.py
microservices/measurement-based-care/mbc/domain/libraries/: state_machine_builder.py
microservices/measurement-based-care/mbc/domain/model/: interaction.py  patient.py  registry.py  user.py
microservices/measurement-based-care/mbc/domain/patient_state_machine/: cocm_workflow.yaml  patient_state_machine.py  state.py  utils.py
microservices/measurement-based-care/mbc/domain/ports/: patient_query_service.py  registry_query_service.py
microservices/measurement-based-care/mbc/domain/state_machine/: loader.py  patient_state_machine.py  patient_state_machine_dynamic.py
microservices/measurement-based-care/mbc/entrypoints/api/: main.py
microservices/measurement-based-care/mbc/state_machine/: actions.py  builder.py  patient_state_machine.py
microservices/measurement-based-care/mbc/state_machine/models/: organization_user.py  registry.py  state_machine.py
microservices/neuro/: Dockerfile  React-Dockerfile  TODO.md  pyproject.toml
microservices/neuro/neuro/adapters/: cognito_adapter.py
microservices/neuro/neuro/domain/command_handlers/: register_microservice_handler.py
microservices/neuro/neuro/domain/ports/: auth_provider_port.py
microservices/neuro/neuro/entrypoints/api/: main.py
microservices/neurology/: Dockerfile  pyproject.toml
microservices/neurology/neurology/: main.py
microservices/organization/: Dockerfile  pyproject.toml
microservices/organization/organization/adapters/: dynamodb_query_service.py
microservices/organization/organization/domain/command_handlers/: create_organization_command_handler.py
microservices/organization/organization/domain/commands/: create_organization_command.py
microservices/organization/organization/domain/model/: organization.py  organization_invite.py  organization_user.py
microservices/organization/organization/entrypoints/api/: main.py
microservices/policy/: pyproject.toml
microservices/policy/policy/adapters/: aws_iam_api_service.py
microservices/policy/policy/domain/model/: aws_policy.py
microservices/user/user/: Dockerfile  Dockerfile.aws.lambda  pyproject.toml
microservices/user/user/adapters/: dynamodb_query_service.py
microservices/user/user/domain/command_handlers/: create_user_command_handler.py  create_user_organization_handler.py  get_user_command_handler.py  get_user_organization_handler.py
microservices/user/user/domain/commands/: create_user_command.py  create_user_organizations.py  get_user_command.py  get_user_organization.py  get_user_organizations.py
microservices/user/user/entrypoints/api/: main.py
microservices/vision/: React-Dockerfile  docker-compose.yml  pyproject.toml
microservices/vision/vision/domain/model/: tracker.py
(+870 files in other folders)
