[tool.poetry]
name = "user"
version = "0.1.0"
description = ""
authors = ["Vijay Selvaraj <vijay.selvaraj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.0"
mypy-boto3-dynamodb = "^1.34.67"
boto3 = "^1.34.88"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
