[tool.poetry]
name = "akello-account"
version = "0.1.0"
description = ""
authors = ["Vijay Selvaraj <vijay.selvaraj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
mangum = "^0.17.0"
aws-lambda-powertools = "^2.38.1"
jmespath = "^1.0.1"
boto3 = "^1.34.113"
mypy-boto3-dynamodb = "^1.34.113"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
