[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["Vijay Selvaraj <vijay.selvaraj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
supertokens-python = "^0.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
