[tool.poetry]
name = "user"
version = "0.1.0"
description = ""
authors = ["Vijay Selvaraj <vijay.selvaraj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.7.0"
mypy-boto3-dynamodb = "^1.34.67"
boto3 = "^1.34.88"
aws-cdk-lib = "^2.138.0"
constructs = "^10.3.0"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
mangum = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
